--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "require": {
     "php": ">=7.4",
-    "illuminate/support": "5.6.* || 5.7.* || 5.8.* || 6.0.*",
+    "illuminate/support": "5.3.*",
     "ext-json": "*"
   },
   "license": "proprietary",
