--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "type": "library",
   "require": {
     "php": ">=7.4",
-    "illuminate/support": "5.3.*",
-    "ext-json": "*"
+    "laravelcollective/html": "^5.5"
   },
   "license": "proprietary",
   "authors": [
@@ -31,6 +30,7 @@
     }
   },
   "require-dev": {
-    "orchestra/testbench": "^3.8"
+    "orchestra/testbench": "^3.8",
+    "ext-json": "*"
   }
 }
