--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
   "description": "Laravel response hateoas",
   "type": "library",
   "require": {
-    "php": ">=7.4",
-    "laravelcollective/html": "^5.5"
+    "php": ">=7.4"
   },
   "license": "proprietary",
   "authors": [
@@ -31,6 +30,7 @@
   },
   "require-dev": {
     "orchestra/testbench": "^3.8",
-    "ext-json": "*"
+    "ext-json": "*",
+    "laravelcollective/html": "^5.5"
   }
 }
